--- a/newsfeed.html
+++ b/newsfeed.html
@@ -9,6 +9,10 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="card">
+      <h2>Nume Prenume</h2>
+      <p>Web developer</p>
+    </div>
     <div class="page-wrapper">
       <header>
         <div class="left-content">
